# CalcPlusPlus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
debian/: control  postinst  prerm
resources/desktop/: calcplusplus.desktop
src/: main.cpp
src/core/: CalculatorCore.cpp  CalculatorCore.h  DatabaseManager.cpp  DatabaseManager.h
src/ui/: HistoryItemWidget.cpp  HistoryItemWidget.h  HistoryPanel.cpp  HistoryPanel.h  MainWindow.cpp  MainWindow.h
src/utils/: CustomAlert.cpp  CustomAlert.h  ErrorHandler.cpp  ErrorHandler.h
